# $Id: Makefile.am,v 1.4 2010/07/01 17:36:51 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for BounceHammer/src/sql, is processed by 
# automake to create Makefile.in.

pkgdatadir = @datarootdir@/script
pkgdata_DATA = MySQL.sql PostgreSQL.sql SQLite.sql \
	mastertable-hostgroups.sql mastertable-providers.sql \
	mastertable-reasons.sql records-example.sql \
	mastertable-many-providers.sql more-example-senderdomains.sql

