# $Id: Makefile.am,v 1.5 2010/08/16 11:57:56 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for BounceHammer/src/sql, is processed by 
# automake to create Makefile.in.

pkgdatadir = @datarootdir@/script
pkgdata_DATA = MySQL.sql PostgreSQL.sql SQLite.sql \
	mastertable-hostgroups.sql mastertable-providers.sql \
	mastertable-reasons.sql records-example.sql \
	mastertable-many-providers.sql more-example-senderdomains.sql \
	MySQL-dailyupdates.sql PostgreSQL-dailyupdates.sql SQLite-dailyupdates.sql


