# $Id: Makefile.am,v 1.3 2010/07/01 17:36:53 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for BounceHammer/template/l10n/en,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/l10n/en
pkgdata_DATA = \
	desc.tt \
	error.tt \
	heads.tt \
	help-bounced-at.html \
	help-destination-domain.html \
	help-diagnostic-code.html \
	help-download-file.html \
	help-frequency.html \
	help-hostgroup.html \
	help-messagetoken.html \
	help-parsed-message.html \
	help-reason.html \
	help-recipient.html \
	help-record-id.html \
	help-senderdomain.html \
	help-to-update-the-record.html \
	help-updated-at.html \
	hostgroup.tt \
	reason.tt \
	terms.tt \
	time.tt \
	words.tt 

