# $Id: Makefile.am,v 1.6.2.2 2011/08/23 21:27:12 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for bounceHammer/template/l10n/ja,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/l10n/ja
pkgdata_DATA = \
	desc.tt \
	error.tt \
	heads.tt \
	help-addresser.html \
	help-available-countries.html \
	help-dailyupdates-day.html \
	help-dailyupdates-week.html \
	help-dailyupdates-registered.html \
	help-dailyupdates-skipped.html \
	help-dailyupdates-modified.html \
	help-bounced-at.html \
	help-destination-domain.html \
	help-diagnostic-code.html \
	help-download-file.html \
	help-frequency.html \
	help-hostgroup.html \
	help-messagetoken.html \
	help-mta-modules.html \
	help-neighbor-domains.html \
	help-parsed-message.html \
	help-provider.html \
	help-reason.html \
	help-recipient.html \
	help-record-id.html \
	help-senderdomain.html \
	help-to-update-the-record.html \
	help-updated-at.html \
	hostgroup.tt \
	reason.tt \
	terms.tt \
	time.tt \
	words.tt 

