# $Id: Makefile.am,v 1.4 2010/07/01 17:36:58 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for BounceHammer/template/standard/element,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/standard/element
pkgdata_DATA = \
	div-create-a-new-mastertable-record.html \
	div-delete-a-mastertable-record.html \
	div-error.html \
	div-exception.html \
	div-index.html \
	div-mastertable-contents.html \
	div-mastertable-error.html \
	div-mastertable-removed.html \
	div-menubar.html \
	div-new-message-token.html \
	div-pagefooter.html \
	div-pagination.html \
	div-result.html \
	dtd-xhtml.html \
	form-search-by-recipient.html \
	iframe-parseddata.html \
	meta-http-equiv.html \
	select-hostgroup.html \
	select-howrecent.html \
	select-language.html \
	select-reason.html

