# $Id: Makefile.am,v 1.1 2010/03/01 05:45:42 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for BounceHammer/template/standard/help,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/standard/help
pkgdata_DATA = h-bounceddate.en.html \
	h-bounceddate.ja.html \
	h-description.en.html \
	h-description.ja.html \
	h-destination-descr.en.html \
	h-destination-descr.ja.html \
	h-destination-input.en.html \
	h-destination-input.ja.html \
	h-download-input.en.html \
	h-download-input.ja.html \
	h-frequency-descr.en.html \
	h-frequency-descr.ja.html \
	h-hostgroup-select.en.html \
	h-hostgroup-select.ja.html \
	h-messagetoken-descr.en.html \
	h-messagetoken-descr.ja.html \
	h-messagetoken-input.en.html \
	h-messagetoken-input.ja.html \
	h-parsed-messages.en.html \
	h-parsed-messages.ja.html \
	h-reason-select.en.html \
	h-reason-select.ja.html \
	h-recipient-address-descr.en.html \
	h-recipient-address-descr.ja.html \
	h-recipient-address-input.en.html \
	h-recipient-address-input.ja.html \
	h-record-update.en.html \
	h-record-update.ja.html \
	h-recordid-descr.en.html \
	h-recordid-descr.ja.html \
	h-senderdomain-descr.en.html \
	h-senderdomain-descr.ja.html \
	h-senderdomain-input.en.html \
	h-senderdomain-input.ja.html \
	h-updateddate.en.html \
	h-updateddate.ja.html

