# $Id: Makefile.am,v 1.3 2010/08/28 17:17:47 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for BounceHammer/template/standard/javascript,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/standard/javascript
pkgdata_DATA = bouncehammer.js dailyupdates.js excanvas.js

