# $Id: Makefile.am,v 1.3.2.1 2011/06/22 05:34:39 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for bounceHammer/template/standard/javascript,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/standard/javascript
pkgdata_DATA = bouncehammer.js dailyupdates.js excanvas.js

