# $Id: Makefile.am,v 1.5 2010/07/12 08:08:32 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for BounceHammer/template/standard/page,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/standard/page
pkgdata_DATA = \
	about.html \
	aggregate.html \
	copyright.html \
	countries.html \
	exception.html \
	index.html \
	mastertable.html \
	messagetoken.html \
	neighbors.html \
	profile.html \
	search.html \
	startsearch.html \
	summary.html \
	test.html \
	version.html

