# $Id: Makefile.am,v 1.6.2.2 2011/08/23 21:27:13 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for bounceHammer/template/standard/page,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/standard/page
pkgdata_DATA = \
	about.html \
	aggregate.html \
	copyright.html \
	countries.html \
	dailyupdates.html \
	exception.html \
	index.html \
	mastertable.html \
	messagetoken.html \
	mtamodules.html \
	neighbors.html \
	profile.html \
	search.html \
	startsearch.html \
	summary.html \
	test.html \
	version.html

