# $Id: Makefile.am,v 1.7.2.1 2011/06/22 05:34:40 ak Exp $
# Copyright (C) 2009,2010 Cubicroot Co. Ltd.
# This is the auto-Makefile for bounceHammer/template/standard/stylesheet,
# is processed by automake to create Makefile.in.

pkgdatadir = @datarootdir@/template/standard/stylesheet
pkgdata_DATA = bouncehammer.css \
	aggregate.css \
	country.css \
	dailyupdates.css \
	dashboard.css \
	mastertable.css \
	messagetoken.css \
	nationalflag.css \
	pagination.css \
	profile.css \
	reason.css \
	record.css \
	search.css \
	summary.css \
	testparse.css

